crates/aranya-policy-compiler/tests/data/scoping/else_block_shadow_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `x` is defined multiple times
  |
2 |     let x = 4
  |         - previous defintion here
...
6 |         let x = 4
  |             ^ re-defined here
